--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="search">Search</string>
     <string name="some_error_occured">Some Error Occured</string>
     <string name="retry">Retry</string>
+    <string name="bookmark_this">BookMark This</string>
 </resources>
